@@ -1,3 +1,9 @@
+2010-09-04  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/45019
+	* dependency.c (gfc_check_dependency): Add argument alising check.
+	* symbol.c (gfc_symbols_could_alias): Add argument alising check.
+
 2010-08-20  Jakub Jelinek  <jakub@redhat.com>
 
 	PR fortran/45344
